<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2007 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mistyrose"
    android:orientation="vertical"
    android:padding="20dip" >

    <GridLayout
        android:id="@+id/up_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="3"
        android:gravity="center" >

        <TextView
            android:id="@+id/total"
            android:layout_column="0"
            android:layout_gravity="left"
            android:layout_margin="5dip"
            android:layout_row="0"
            android:text="@string/total" />

        <TextView
            android:id="@+id/total_count"
            android:layout_column="0"
            android:layout_gravity="left"
            android:layout_margin="5dip"
            android:layout_row="1"
            android:text="@string/zero"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/max"
            android:layout_width="200dp"
            android:layout_column="1"
            android:layout_margin="5dip"
            android:layout_row="0"
            android:gravity="center"
            android:text="@string/max" />

        <TextView
            android:id="@+id/max_count"
            android:layout_width="200dp"
            android:layout_column="1"
            android:layout_margin="5dip"
            android:layout_row="1"
            android:gravity="center"
            android:text="@string/zero"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/avail"
            android:layout_column="2"
            android:layout_gravity="right"
            android:layout_margin="5dip"
            android:layout_row="0"
            android:text="@string/avail"
            android:textColor="@color/mediumturquoise" />

        <TextView
            android:id="@+id/avail_count"
            android:layout_column="2"
            android:layout_gravity="right"
            android:layout_margin="5dip"
            android:layout_row="1"
            android:text="@string/zero"
            android:textColor="@color/mediumturquoise"
            android:textStyle="bold" />
    </GridLayout>

    <TextView
        android:id="@+id/timer_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dip"
        android:gravity="center"
        android:text="@string/zero_timer"
        android:textColor="@color/chocolate"
        android:textSize="50sp"
        android:textStyle="bold" />
    
    
    <RelativeLayout
        android:id="@+id/progress_main"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_gravity="center_vertical"
        android:layout_weight="0.41">
        
        <ImageView 
            android:id="@+id/image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/girl_kid"
            android:contentDescription="@string/contentDescription"
            />

       <Button 
           android:id="@+id/click"
           android:layout_width="150dip"
           android:layout_height="150dip"
           android:layout_centerInParent="true"
           android:background="@android:color/transparent"
           android:onClick="onClick"
           />
       
   </RelativeLayout>

</LinearLayout>